# stog

./: Cargo.toml  README.md
src/init_files/: config.toml
src/init_files/posts/: lorem1.md  lorem2.md
src/init_files/templates/: atom.xml  index.html  post.html
src/init_files/theme/: atom.xml  index.html  normalize.min.css  post.html  skeleton.min.css  style.css
src/lib/: common.rs  config.rs  header_parser.rs  lib.rs  md_parser.rs  post_parser.rs  templator.rs
src/test_includes/: markdown_lorem_ipsum.html  markdown_lorem_ipsum.md  markdown_lorem_ipsum_with_header.md  markdown_lorem_ipsum_with_header_body.md  markdown_lorem_ipsum_with_header_header.md
