[package]
name = "stog"
version = "0.1.0"
authors = ["Zola Gonano <zolagonano@protonmail.com>"]
edition = "2021"
description = "STOG is a static blog generator implemented in rust"
homepage = "https://github.com/zolagonano/stog.git"
repository = "https://github.com/zolagonano/stog.git"
keywords = ["blog", "markdown", "static", "minimal", "generator"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"

[lib]
name = "lib"
path = "src/lib/lib.rs"
doc = false

[[bin]]
name = "stog"
path = "src/bin/bin.rs"
doc = false

[dependencies]
pulldown-cmark = "0.8.0"
serde_yaml = "0.8.17"
regex = "1.4.2"
tera = "1"
serde = "1.0.124"
serde_derive = "1.0.124"
clap = "2"
toml = "0.5.8"
fs_extra = "1.2.0"
