[package]
name = "stog"
version = "0.2.0"
authors = ["Zola Gonano <zolagonano@protonmail.com>"]
edition = "2021"
description = "STOG is a static blog generator implemented in rust"
homepage = "https://github.com/zolagonano/stog.git"
repository = "https://github.com/zolagonano/stog.git"
keywords = ["blog", "markdown", "static", "minimal", "generator"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"

[lib]
name = "lib"
path = "src/lib/lib.rs"
doc = false

[[bin]]
name = "stog"
path = "src/bin/bin.rs"
doc = false

[dependencies]
pulldown-cmark = "0.9.1"
serde_yaml = "0.8.24"
regex = "1.5.5"
tera = "1.16.0"
serde = "1.0.138"
serde_derive = "1.0.138"
clap = "2"
toml = "0.5.9"
fs_extra = "1.2.0"
